--- a/pruebas/ensambla.ipynb
+++ b/pruebas/ensambla.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'clang' has no attribute 'cindex'",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'clang'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\IsraCode\\Documents\\FI\\2024-1\\Compiladores\\Compilador3\\Nuevo\\Compilador\\pruebas\\ensambla.ipynb Celda 1\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m   c_code \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m  int main() \u001b[39m\u001b[39m{\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m    int a = 1;\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39m  }\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m   asm_code \u001b[39m=\u001b[39m clang_to_asm(c_code)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m   \u001b[39mprint\u001b[39m(asm_code)\n",
-      "\u001b[1;32mc:\\Users\\IsraCode\\Documents\\FI\\2024-1\\Compiladores\\Compilador3\\Nuevo\\Compilador\\pruebas\\ensambla.ipynb Celda 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# Creamos un analizador léxico y sintáctico de Clang.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m index \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m c_parser \u001b[39m=\u001b[39m clang\u001b[39m.\u001b[39;49mcindex\u001b[39m.\u001b[39mParser(index)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# Parseamos el código C.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W0sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m translation_unit \u001b[39m=\u001b[39m c_parser\u001b[39m.\u001b[39mparse(c_code)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'clang' has no attribute 'cindex'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mclang\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclang_to_asm\u001b[39m(c_code):\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m  Traduce código C a lenguaje ensamblador utilizando Clang.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    Código ensamblador equivalente.\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'clang'"
      ]
     }
    ],
@@ -66,19 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FileAST' object has no attribute 'to_assembly'",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pycparser'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\IsraCode\\Documents\\FI\\2024-1\\Compiladores\\Compilador3\\Nuevo\\Compilador\\pruebas\\ensambla.ipynb Celda 2\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m   c_code \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m  int main() \u001b[39m\u001b[39m{\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m    int a = 1;\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39m  }\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m   asm_code \u001b[39m=\u001b[39m c_to_asm(c_code)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m   \u001b[39mprint\u001b[39m(asm_code)\n",
-      "\u001b[1;32mc:\\Users\\IsraCode\\Documents\\FI\\2024-1\\Compiladores\\Compilador3\\Nuevo\\Compilador\\pruebas\\ensambla.ipynb Celda 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m translation_unit \u001b[39m=\u001b[39m c_parser\u001b[39m.\u001b[39mparse(c_code)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# Obtenemos el código ensamblador del analizador.\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m asm_code \u001b[39m=\u001b[39m translation_unit\u001b[39m.\u001b[39;49mto_assembly()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/IsraCode/Documents/FI/2024-1/Compiladores/Compilador3/Nuevo/Compilador/pruebas/ensambla.ipynb#W1sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mreturn\u001b[39;00m asm_code\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'FileAST' object has no attribute 'to_assembly'"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpycparser\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mc_to_asm\u001b[39m(c_code):\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m  Traduce código C a lenguaje ensamblador utilizando Pycparser.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    Código ensamblador equivalente.\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycparser'"
      ]
     }
    ],
@@ -127,11 +125,85 @@
     "\n",
     "  print(asm_code)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t.section\t__TEXT,__text,regular,pure_instructions\n",
+      "\t.build_version macos, 12, 0\tsdk_version 12, 3\n",
+      "\t.globl\t_main                           ## -- Begin function main\n",
+      "\t.p2align\t4, 0x90\n",
+      "_main:                                  ## @main\n",
+      "\t.cfi_startproc\n",
+      "## %bb.0:\n",
+      "\tpushq\t%rbp\n",
+      "\t.cfi_def_cfa_offset 16\n",
+      "\t.cfi_offset %rbp, -16\n",
+      "\tmovq\t%rsp, %rbp\n",
+      "\t.cfi_def_cfa_register %rbp\n",
+      "\tsubq\t$16, %rsp\n",
+      "\tmovl\t$0, -4(%rbp)\n",
+      "\tleaq\tL_.str(%rip), %rdi\n",
+      "\tmovb\t$0, %al\n",
+      "\tcallq\t_printf\n",
+      "\txorl\t%eax, %eax\n",
+      "\taddq\t$16, %rsp\n",
+      "\tpopq\t%rbp\n",
+      "\tretq\n",
+      "\t.cfi_endproc\n",
+      "                                        ## -- End function\n",
+      "\t.section\t__TEXT,__cstring,cstring_literals\n",
+      "L_.str:                                 ## @.str\n",
+      "\t.asciz\t\"Hola, mundo!\\n\"\n",
+      "\n",
+      ".subsections_via_symbols\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "def c_code_to_asm(c_code):\n",
+    "    # Crear un archivo temporal con el código C\n",
+    "    with open('temp.c', 'w') as f:\n",
+    "        f.write(c_code)\n",
+    "\n",
+    "    # Llamar a gcc para compilar el código C y generar el ensamblador\n",
+    "    subprocess.run(['gcc', '-S', 'temp.c'])\n",
+    "\n",
+    "    # Leer el contenido del archivo ensamblador generado\n",
+    "    with open('temp.s', 'r') as f:\n",
+    "        asm_code = f.read()\n",
+    "\n",
+    "    return asm_code\n",
+    "\n",
+    "# Ejemplo de código C\n",
+    "c_code = \"\"\"\n",
+    "#include <stdio.h>\n",
+    "int main() {\n",
+    "    printf(\"Hola, mundo!\\\\n\");\n",
+    "    return 0;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "# Obtener el código ensamblador\n",
+    "asm_code = c_code_to_asm(c_code)\n",
+    "\n",
+    "# Imprimir el código ensamblador\n",
+    "print(asm_code)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +217,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
